--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Sistema de cadastro de jogos</h1>
-    <script src="app.js"> "atualizações da coletânea de jogos" </script>
+    <script src="app.js"> </script>
 </body>
 </html>
